# RAG

./: .gitignore  Cargo.toml  Dockerfile  README.md  changes.md  fly.toml  render.yaml
RagFrontend/: index.html  package-lock.json  package.json
RagFrontend/src/: App.jsx
RagFrontend/src/api/: index.js
RagFrontend/src/components/: RouteGuards.jsx  ThemeToggle.jsx
RagFrontend/src/context/: AuthContext.jsx  ThemeContext.jsx
RagFrontend/src/layouts/: MainLayout.jsx
RagFrontend/src/pages/: Dashboard.jsx  Landing.jsx  SignIn.jsx  SignUp.jsx
migrations/: 20260105175734_rag.down.sql  20260105175734_rag.up.sql
python_parser_service/: Dockerfile  fly.toml  main.py
src/: main.rs
src/db/: db_error.rs  mod.rs  qdrant_db.rs
src/middlwares/: auth_middleware.rs
src/rag_fn/: ask_model.rs  chunking.rs  generate_accesstoken.rs  generate_refreshtoken.rs  get_final_prompt.rs  initialize.rs  mean_pooling.rs  mod.rs  summary_provider.rs
src/routes/: health.rs  mod.rs  parse_dox.rs  querying.rs  refetch_access_token.rs  signin.rs  signup.rs  test_user_profile.rs
